test/files/pos/quasiquotes-anon-fun-wildcard-param/Test_2.scala
// scalac: -Wunused:params -Wmacros:after -Werror
object Test extends App {
  println(Macros.f(123))
}
