test/files/neg/macro-reify-splice-splice/Test_2.scala
// scalac: -language:experimental.macros
object Test extends App {
  println(Macros.foo)
}
